fix: padding-left too much at carets, analysis-four slide two svgs all green

--- a/css/main.css
+++ b/css/main.css
@@ -305,7 +305,7 @@
     @apply min-w-full self-start gap-4 bg-neutral-four snap-center transition-all duration-300 ease-in-out lg:self-center lg:flex-row lg:min-w-175 lg:h-92 xl:gap-8 xl:min-w-234 xl:h-128.75 first-of-type:lg:ml-[calc((100vw-700px)/2)] first-of-type:xl:ml-[calc((100vw-936px)/2)] last-of-type:lg:mr-[calc((100vw-700px)/2)] last-of-type:xl:mr-[calc((100vw-936px)/2)];
   }
 
-  .presentation-slider .presentation-slide:not(:last-child) div:first-of-type svg {
+  dialog:not(#analysis-four) .presentation-slider .presentation-slide:not(:last-child) div:first-of-type svg {
     @apply text-neutral-two-dark;
   }
 
